  See menu File --> Find Preference

Update Commons Lang library to version 3.12.0,
  see https://commons.apache.org/proper/commons-lang/

Main application toolbar: Replaced the former Aliases and Session combo boxes by toolbar buttons
  which display popup menus to select Aliases and Session respectively.

Removed dependencies on outdated Hibernate libraries (3.2.4.sp1).

Bug fixes:

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/1
  Table scripts for Oracle RDBMS:
  For Oracle databases right mouse click on table in Object tree --> Scripts --> Create Table Script
  scripted columns of type number as decimal.

#1508 MS SQL Server: When the catalog was switched by SQuirreL's catalogs combobox
  the subsequent Object tree reload didn't work.
  The reason is a bug of the MSSQL JDBC driver (https://github.com/microsoft/mssql-jdbc).
  The logged message of the bug is:
  "SQLServerException: The prepared statement handle 1 is not valid in this context ..."
  The fix consists of a workaround for the driver's bug.

After executing a CREATE TABLE statement the new table showed up multiple times in the Object tree.

SQL Scripts Plugin: Right mouse click on table in Object tree --> Scripts --> Select Script
  created a SELECT statement with empty column list
  when "Qualify table names ..." and "Use double quotes..." were checked at
  menu File --> Global Preferences --> tab "SQL Scripts".

Look and Feel Plugin: Improved handling JGoodies' WindowsLookAndFeel Java 17 error.
  When the error occurs SQuirreL will switch to its standard Metal/Ocean Look and Feel
  and the log (see menu Window --> "View SQuirreL Logs") will contain detailed information.
  Note: JGoddies Look and Feels leave tabs empty at several places. If you are using
  JGoddies please consider switching to a Metal or FlatLaf Look and Feel.

Start script fixes:
  SQuirreL's installer for Windows/Linux/others now reliably transfers